--- a/hello_kuap.html
+++ b/hello_kuap.html
@@ -33,7 +33,7 @@
 			
 <script>
 (function() {
-var jsonArr = [];
+var jsonArr = []; // array of Json structures
 
 
     var lenghtStrings = document.getElementsByTagName('tr');
@@ -50,13 +50,16 @@ var jsonArr = [];
 		
 			var obj = {}; // object that we'll put in jsonArr
 			
-			var head = lenghtColumns[0].innerText; // Заголовок строчки (нулевая колонка)
+			var head = lenghtColumns[0].innerText; // Заголовок строчки (0-ая колонка)
+			//alert(head.trim());
+			head=head.trim();
 			console.log(head);
 			var currentColumn = lenghtColumns[j];
             console.log(currentColumn.textContent);
 			
 			obj[head] = currentColumn.textContent;
 			jsonArr.push(obj);
+			//alert(obj);
 		
 			
         }
